--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/stompjs": "^2.3.5",
     "@types/styled-components": "^5.1.14",
     "axios": "^0.22.0",
+    "compressorjs": "^1.1.1",
     "react": "^17.0.2",
     "react-daum-postcode": "^3.0.0",
     "react-dom": "^17.0.2",
@@ -26,8 +27,10 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
+    "sass": "^1.49.9",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
+    "swiper": "6.8.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
