--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.22.0",
     "compressorjs": "^1.1.1",
+    "loadsh": "^0.0.4",
     "react": "^17.0.2",
     "react-daum-postcode": "^3.0.0",
     "react-dom": "^17.0.2",
@@ -57,7 +58,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
+  "devDependencies": { 
+    "@types/lodash": "^4.14.182",
     "cra-bundle-analyzer": "^0.1.1"
   }
 }
